--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
 						expires: '395 day',
 						provider: 'Google',
 						id: 'GA',
-						mount: function() {
-
-						}
+						// Script urls can be defined which will be loaded when consent is given
+						// scripts: [ 'https://www.googletagmanager.com/gtag/js' ]
 					},
 
 					/* First give consent, then enable this to get prompted again about changes
